plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.team'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    //lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    //spring boot
    implementation group: 'org.springframework.boot', name: 'spring-boot', version: '3.2.3'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.2.3'
    //postgreSQL
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'

    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
    implementation group: 'org.springframework', name: 'spring-jdbc', version: '6.1.5'


    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.2.3'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    //nimbus
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.38-rc3'
    //oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    //mapstruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    compileOnly 'org.mapstruct:mapstruct-jdk8:1.5.5.Final'
    implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.1.0'
    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
    //spring fox starter 3.0
    //implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
    //thymleaf
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.2.5'


}
